General dev updates (including package name change)